apps/media/arr-base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arr
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
