apps/media/arr-base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arr
spec:
  ingressClassName: tailscale
  rules:
    - host: arr
      http:
        paths:
        - backend:
            service:
              name: arr
              port:
                name: http
          path: /
          pathType: Prefix
  tls:
    - hosts:
        - arr
